Used torch.__version__

--- a/1-4_PyTorch-Basics/mike_pytorch_intro.ipynb
+++ b/1-4_PyTorch-Basics/mike_pytorch_intro.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "9b425fc0",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "faf6aee8",
    "metadata": {},
    "outputs": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "094052d3",
    "metadata": {},
    "outputs": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "251a2d75",
    "metadata": {},
    "outputs": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "22eb3030",
    "metadata": {},
    "outputs": [
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "1db9fe69",
    "metadata": {},
    "outputs": [
@@ -142,16 +142,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[0.2657, 0.9892],\n",
-      "        [0.4246, 0.2396],\n",
-      "        [0.8476, 0.7504],\n",
-      "        [0.1289, 0.0515],\n",
-      "        [0.7309, 0.5883],\n",
-      "        [0.9416, 0.5218],\n",
-      "        [0.6238, 0.6773],\n",
-      "        [0.8438, 0.7929],\n",
-      "        [0.6230, 0.9505],\n",
-      "        [0.9723, 0.7577]])\n"
+      "tensor([[0.3639, 0.8036],\n",
+      "        [0.6743, 0.8346],\n",
+      "        [0.8452, 0.2515],\n",
+      "        [0.0393, 0.5910],\n",
+      "        [0.7767, 0.5257],\n",
+      "        [0.2228, 0.1938],\n",
+      "        [0.2706, 0.6423],\n",
+      "        [0.3103, 0.3193],\n",
+      "        [0.8491, 0.4736],\n",
+      "        [0.8741, 0.5526]])\n"
      ]
     }
    ],
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "7ef09d37",
    "metadata": {},
    "outputs": [
@@ -170,16 +170,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[0.6184, 0.1100, 0.5257],\n",
-      "        [0.6420, 0.6256, 0.7248],\n",
-      "        [0.4681, 0.1568, 0.3778],\n",
-      "        [0.0602, 0.7436, 0.2420],\n",
-      "        [0.6754, 0.5832, 0.8399],\n",
-      "        [0.5841, 0.1865, 0.7701],\n",
-      "        [0.6351, 0.1927, 0.6729],\n",
-      "        [0.1803, 0.9245, 0.5901],\n",
-      "        [0.5284, 0.0152, 0.9698],\n",
-      "        [0.4239, 0.3933, 0.7191]])\n"
+      "tensor([[0.4664, 0.1584, 0.8527],\n",
+      "        [0.2163, 0.5872, 0.5053],\n",
+      "        [0.0083, 0.0244, 0.2549],\n",
+      "        [0.3137, 0.4840, 0.8434],\n",
+      "        [0.4468, 0.8703, 0.2451],\n",
+      "        [0.3444, 0.6102, 0.5986],\n",
+      "        [0.4510, 0.8998, 0.7473],\n",
+      "        [0.3252, 0.9323, 0.6706],\n",
+      "        [0.2416, 0.8035, 0.9316],\n",
+      "        [0.7113, 0.3348, 0.9712]])\n"
      ]
     }
    ],
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "id": "f75df848",
    "metadata": {},
    "outputs": [
@@ -277,20 +277,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[[0.8801, 0.0409],\n",
-      "         [0.6446, 0.4188]],\n",
+      "tensor([[[0.8121, 0.0964],\n",
+      "         [0.1227, 0.1872]],\n",
       "\n",
-      "        [[0.1819, 0.2604],\n",
-      "         [0.9541, 0.2302]],\n",
+      "        [[0.4208, 0.5071],\n",
+      "         [0.2934, 0.1153]],\n",
       "\n",
-      "        [[0.3273, 0.7806],\n",
-      "         [0.0587, 0.9029]],\n",
+      "        [[0.0154, 0.9603],\n",
+      "         [0.4932, 0.1871]],\n",
       "\n",
-      "        [[0.7097, 0.2613],\n",
-      "         [0.2945, 0.0705]],\n",
+      "        [[0.0243, 0.1066],\n",
+      "         [0.9187, 0.3779]],\n",
       "\n",
-      "        [[0.0240, 0.5795],\n",
-      "         [0.4577, 0.4694]]])\n"
+      "        [[0.4926, 0.8556],\n",
+      "         [0.8343, 0.9527]]])\n"
      ]
     }
    ],
@@ -309,25 +309,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[[0.7654, 0.0515, 0.4692],\n",
-      "         [0.1765, 0.2156, 0.9284],\n",
-      "         [0.8509, 0.6361, 0.5469]],\n",
+      "tensor([[[0.2682, 0.9569, 0.2668],\n",
+      "         [0.4098, 0.5896, 0.1608],\n",
+      "         [0.7380, 0.7781, 0.4695]],\n",
       "\n",
-      "        [[0.0380, 0.4264, 0.2363],\n",
-      "         [0.8436, 0.3405, 0.7450],\n",
-      "         [0.1256, 0.8935, 0.1176]],\n",
+      "        [[0.5514, 0.0134, 0.2366],\n",
+      "         [0.4457, 0.7697, 0.7052],\n",
+      "         [0.2361, 0.5845, 0.0233]],\n",
       "\n",
-      "        [[0.5021, 0.2333, 0.5198],\n",
-      "         [0.7793, 0.9656, 0.7088],\n",
-      "         [0.0413, 0.5024, 0.6372]],\n",
+      "        [[0.3697, 0.9173, 0.2249],\n",
+      "         [0.0916, 0.8970, 0.1201],\n",
+      "         [0.1968, 0.4631, 0.3273]],\n",
       "\n",
-      "        [[0.1093, 0.8318, 0.8035],\n",
-      "         [0.9164, 0.0210, 0.1169],\n",
-      "         [0.0411, 0.2325, 0.1271]],\n",
+      "        [[0.4343, 0.3417, 0.6172],\n",
+      "         [0.6975, 0.3484, 0.1090],\n",
+      "         [0.5101, 0.0586, 0.8102]],\n",
       "\n",
-      "        [[0.2750, 0.6923, 0.8362],\n",
-      "         [0.3193, 0.2008, 0.2856],\n",
-      "         [0.7797, 0.1916, 0.1927]]])\n"
+      "        [[0.4446, 0.3405, 0.1535],\n",
+      "         [0.2925, 0.1110, 0.8884],\n",
+      "         [0.0117, 0.8808, 0.3213]]])\n"
      ]
     }
    ],
@@ -490,20 +490,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "A:  tensor([[0.9241, 0.0110],\n",
-      "        [0.2890, 0.3500]])\n",
+      "A:  tensor([[0.0366, 0.2541],\n",
+      "        [0.1342, 0.7612]])\n",
       "\n",
-      "B:  tensor([[0.8781, 0.2158],\n",
-      "        [0.4983, 0.2876]])\n",
+      "B:  tensor([[0.6944, 0.8117],\n",
+      "        [0.9060, 0.2517]])\n",
       "\n",
-      "C:  tensor([[1.7561, 0.4316],\n",
-      "        [0.9966, 0.5751]])\n",
+      "C:  tensor([[1.3887, 1.6235],\n",
+      "        [1.8120, 0.5034]])\n",
       "\n",
-      "D:  tensor([[2.6802, 0.4427],\n",
-      "        [1.2855, 0.9251]])\n",
+      "D:  tensor([[1.4253, 1.8776],\n",
+      "        [1.9462, 1.2646]])\n",
       "\n",
-      "E:  tensor([[0.8114, 0.0024],\n",
-      "        [0.1440, 0.1006]])\n"
+      "E:  tensor([[0.0254, 0.2063],\n",
+      "        [0.1216, 0.1916]])\n"
      ]
     }
    ],
@@ -536,20 +536,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "A:  tensor([[0.5802, 0.1614],\n",
-      "        [0.4006, 0.6998]])\n",
+      "A:  tensor([[0.6294, 0.7422],\n",
+      "        [0.0174, 0.8870]])\n",
       "\n",
-      "B:  tensor([[0.9918, 0.4050],\n",
-      "        [0.0949, 0.2636]])\n",
+      "B:  tensor([[0.4169, 0.4340],\n",
+      "        [0.7150, 0.5805]])\n",
       "\n",
-      "C:  tensor([[0.5754, 0.0654],\n",
-      "        [0.0380, 0.1845]])\n",
+      "C:  tensor([[0.2624, 0.3221],\n",
+      "        [0.0124, 0.5149]])\n",
       "\n",
-      "D:  tensor([[1.5672, 0.4704],\n",
-      "        [0.1329, 0.4481]])\n",
+      "D:  tensor([[0.6793, 0.7561],\n",
+      "        [0.7275, 1.0954]])\n",
       "\n",
-      "E:  tensor([[-0.0047, -0.0960],\n",
-      "        [-0.3626, -0.5154]])\n"
+      "E:  tensor([[-0.3670, -0.4201],\n",
+      "        [-0.0050, -0.3721]])\n"
      ]
     }
    ],
@@ -594,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "id": "fbfd711d",
    "metadata": {},
    "outputs": [
@@ -615,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "id": "66371747",
    "metadata": {},
    "outputs": [
@@ -636,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 23,
    "id": "a0fdce90",
    "metadata": {},
    "outputs": [
@@ -644,7 +644,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([4, 3, 0, 2, 1])\n",
+      "tensor([1, 2, 4, 0, 3])\n",
       "torch.LongTensor\n"
      ]
     }
@@ -657,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 24,
    "id": "95f08c80",
    "metadata": {},
    "outputs": [
@@ -665,7 +665,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([2, 6, 9, 1, 3, 0, 8, 5, 4, 7])\n",
+      "tensor([5, 7, 3, 0, 4, 9, 8, 6, 2, 1])\n",
       "torch.LongTensor\n"
      ]
     }
@@ -678,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 25,
    "id": "41f36508",
    "metadata": {},
    "outputs": [
@@ -699,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 26,
    "id": "8820b466",
    "metadata": {},
    "outputs": [
@@ -718,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 27,
    "id": "8b87f83f",
    "metadata": {},
    "outputs": [
@@ -737,7 +737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 28,
    "id": "9c5e186b",
    "metadata": {},
    "outputs": [
@@ -759,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 29,
    "id": "9e6195c2",
    "metadata": {},
    "outputs": [
@@ -778,7 +778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 30,
    "id": "27620f15",
    "metadata": {},
    "outputs": [
@@ -807,7 +807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 31,
    "id": "afa73147",
    "metadata": {},
    "outputs": [
@@ -830,7 +830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 32,
    "id": "d763f47d",
    "metadata": {},
    "outputs": [
@@ -848,7 +848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 33,
    "id": "0e6d184d",
    "metadata": {},
    "outputs": [
@@ -866,7 +866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 34,
    "id": "6a06cb6b",
    "metadata": {},
    "outputs": [
@@ -885,7 +885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 35,
    "id": "f0d02a55",
    "metadata": {},
    "outputs": [
@@ -905,7 +905,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 36,
    "id": "97b9f0c5",
    "metadata": {},
    "outputs": [
@@ -928,7 +928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 37,
    "id": "306dcd30",
    "metadata": {},
    "outputs": [
@@ -957,7 +957,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 38,
    "id": "d4fbf4af",
    "metadata": {},
    "outputs": [
@@ -984,7 +984,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 39,
    "id": "04debb47",
    "metadata": {},
    "outputs": [
@@ -1013,6 +1013,27 @@
    "metadata": {},
    "source": [
     "this code taken with modification from Xavier Bresson, NUS under MIT licence"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "29f92848",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'2.8.0+cu129'"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.__version__"
    ]
   }
  ],
